<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.DashboardFragment"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <fragment
        android:id="@+id/toolbar"
        android:name="fr.oworld.stepbystep.ui.ToolbarOther"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/tipsMainCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/grey"
                        app:cardCornerRadius="10dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/tipsMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tipsTitleTxt"
                                style="@style/TxtTitleBase"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:text="@string/tip_moment"
                                android:textAlignment="textStart"
                                app:layout_constraintBottom_toTopOf="@id/tipsTitleTxt"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/tipsImage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:src="@drawable/ic_tips"
                                app:layout_constraintBottom_toBottomOf="@id/tipsTitleTxt"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tipsDetails"
                                style="@style/TxtNormalBase"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="20dp"
                                android:text="@string/passe_etape_suivante"
                                android:textAlignment="center"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tipsTitleTxt" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@color/orange">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/weatherTitle"
                                style="@style/TxtTitleBase"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="5dp"
                                android:text="@string/meteo_jour"
                                android:textAlignment="center"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tipsTitleTxt"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/weatherToday"
                                style="@style/TxtNormalBase"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="5dp"
                                android:text="@string/meteo_jour_details"
                                android:textAlignment="center"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tipsTitleTxt"/>

                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/seeMoreCard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:backgroundTint="@color/white"
                            app:cardCornerRadius="10dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/seeMoreTxt"
                                style="@style/TxtNormalBase"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:text="@string/voir_plus"
                                android:textColor="@color/green"
                                android:textAlignment="textStart"
                                app:layout_constraintBottom_toTopOf="@id/tipsTitleTxt"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:background="@color/orange"
                    android:gravity="center"
                    >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/weatherThunderCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_thunder"
                            android:padding="10dp"
                            app:tint="@color/black"
                            />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/weatherRainyCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_rain"
                            android:padding="10dp"
                            app:tint="@color/black"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/weatherCloudCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_cloud"
                            app:tint="@color/black"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/weathersunCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_sun"
                            android:padding="10dp"
                            app:tint="@color/black"/>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="1">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/notesTitle"
                                    style="@style/TxtTitleBase"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="5dp"
                                    android:text="@string/mes_competences"
                                    android:textAlignment="center"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/tipsTitleTxt"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/skillList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/guideline"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"/>

                </LinearLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </LinearLayout>